force-app/main/default/objects/Invoice__c/fields/Actual_Income__c.field-meta.xml
<CustomField>
    <fullName>Actual_Income__c</fullName>
    <label>Actual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>