force-app/main/default/objects/Invoice__c/fields/Actual_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Actual_Outcome__c</fullName>
    <label>Actual Outcome</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>