force-app/main/default/objects/Invoice__c/fields/Billed_By__c.field-meta.xml
<CustomField>
    <fullName>Billed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices (Payer)</relationshipLabel>
    <relationshipName>Billed_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>