force-app/main/default/objects/Invoice__c/fields/Billed_To__c.field-meta.xml
<CustomField>
    <fullName>Billed_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices (Payee)</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>