force-app/main/default/objects/Invoice__c/fields/Custom_Dropbox_Path__c.field-meta.xml
<CustomField>
    <fullName>Custom_Dropbox_Path__c</fullName>
    <formula>&quot;Accounts/&quot;&amp;Account__r.Name&amp;&quot;/Invoices/&quot;&amp;SUBSTITUTE(Invoice_Number__c, &apos;/&apos;, &apos;-&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Dropbox Path</label>
    <type>Text</type>
</CustomField>