force-app/main/default/objects/Invoice__c/fields/Difference__c.field-meta.xml
<CustomField>
    <fullName>Difference__c</fullName>
    <formula>IF(
Actual_Income__c &lt;&gt; 0, 
Total__c - Actual_Income__c,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>