force-app/main/default/objects/Invoice__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <formula>Submission_Date__c +  30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>