force-app/main/default/objects/Invoice__c/fields/Entity_Revenue_Stat__c.field-meta.xml
<CustomField>
    <fullName>Entity_Revenue_Stat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity Revenue Stat</label>
    <referenceTo>Entity_Revenue_Stat__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>