force-app/main/default/objects/Invoice__c/fields/Final_Total__c.field-meta.xml
<CustomField>
    <fullName>Final_Total__c</fullName>
    <formula>IF( 
				Total__c &gt; 0, 
				Total__c,
				Actual_Income__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>