force-app/main/default/objects/Invoice__c/fields/Hour_Cost_after_Tax__c.field-meta.xml
<CustomField>
    <fullName>Hour_Cost_after_Tax__c</fullName>
    <formula>Total_After_Tax__c /  Total_Time_Efforts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hour Cost after Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>