force-app/main/default/objects/Invoice__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <formula>LPAD(TEXT(MONTH(Working_Period_Start__c)),2,&quot;0&quot;) + &quot;/&quot; + TEXT(YEAR(Working_Period_Start__c))</formula>
    <label>Date</label>
    <type>Text</type>
</CustomField>