force-app/main/default/objects/Invoice__c/fields/Invoice_Title__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Title__c</fullName>
    <label>Invoice Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>