force-app/main/default/objects/Invoice__c/fields/Invoice_Year__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Year__c</fullName>
    <formula>YEAR(Working_Period_Start__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>