force-app/main/default/objects/Invoice__c/fields/Partner_Commission__c.field-meta.xml
<CustomField>
    <fullName>Partner_Commission__c</fullName>
    <formula>IF(
AND(
RecordType.DeveloperName = &apos;Billable&apos;,
ISPICKVAL(Status__c, &apos;Paid&apos;)),
Total__c - Actual_Income__c,
IF(
AND(
RecordType.DeveloperName = &apos;Payable&apos;,
ISPICKVAL(Status__c, &apos;Paid&apos;)),
-Partner_Commission_Payable__c,
NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>