force-app/main/default/objects/Invoice__c/fields/Partner_Commission_Is_Paid__c.field-meta.xml
<CustomField>
    <fullName>Partner_Commission_Is_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Commission Is Paid</label>
    <type>Checkbox</type>
</CustomField>