force-app/main/default/objects/Invoice__c/fields/Partner_Commission_Payable__c.field-meta.xml
<CustomField>
    <fullName>Partner_Commission_Payable__c</fullName>
    <label>Partner Commission Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>