force-app/main/default/objects/Invoice__c/fields/Payee_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Payee_Country_Code__c</fullName>
    <formula>TEXT(Payee_Bank_Account__r.Bank__r.Account__r.Billing_Country_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payee Country Code</label>
    <type>Text</type>
</CustomField>