force-app/main/default/objects/Invoice__c/fields/Percent_of_Difference__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Difference__c</fullName>
    <formula>(Total__c -  Actual_Income__c )/Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent of Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>