force-app/main/default/objects/Invoice__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <description>Use to specify date of creation for customer</description>
    <inlineHelpText>Use to specify date of creation for customer</inlineHelpText>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>