force-app/main/default/objects/Invoice__c/fields/Total_After_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_After_Tax__c</fullName>
    <formula>IF(ISBLANK(Entity_Revenue_Stat__c), Total__c, Total__c * (1 -  Entity_Revenue_Stat__r.Tax_Fraction__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total After Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>