force-app/main/default/objects/Invoice__c/fields/Total_In_Words__c.field-meta.xml
<CustomField>
    <fullName>Total_In_Words__c</fullName>
    <label>Total In Words</label>
    <type>TextArea</type>
</CustomField>