force-app/main/default/objects/Invoice__c/fields/Total_Time_Efforts__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Efforts__c</fullName>
    <label>Total Time Efforts</label>
    <summarizedField>Invoice_Line_Item__c.Time_Spent__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>