force-app/main/default/objects/Invoice__c/fields/Working_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Working_Period_End__c</fullName>
    <label>Working Period End</label>
    <type>Date</type>
</CustomField>