force-app/main/default/objects/Invoice__c/fields/Working_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Working_Period_Start__c</fullName>
    <label>Working Period Start</label>
    <type>Date</type>
</CustomField>