force-app/main/default/objects/Invoice__c/recordTypes/Billable.recordType-meta.xml
<RecordType>
    <fullName>Billable</fullName>
    <active>true</active>
    <label>Billable</label>
</RecordType>