force-app/main/default/objects/Invoice__c/validationRules/Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Name</fullName>
    <active>true</active>
    <errorConditionFormula>Name != $Label.HOHO_LABEL</errorConditionFormula>
    <errorMessage>ERROR</errorMessage>
</ValidationRule>