force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Billed_By__c</columns>
    <columns>Billed_To__c</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Working_Period_Start__c</columns>
    <columns>Working_Period_End__c</columns>
    <columns>Actual_Income__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>