force-app/main/default/objects/Invoice__c/listViews/Payable_Invoices.listView-meta.xml
<ListView>
    <fullName>Payable_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Billed_By__c</columns>
    <columns>Billed_To__c</columns>
    <columns>Status__c</columns>
    <columns>Actual_Outcome__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Invoice__c.Payable</value>
    </filters>
    <label>Payable Invoices</label>
</ListView>