force-app/main/default/objects/Invoice__c/listViews/Unpaid_Invoices.listView-meta.xml
<ListView>
    <fullName>Unpaid_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Account__c</columns>
    <columns>Billed_To__c</columns>
    <columns>Payee_Bank_Account__c</columns>
    <columns>Working_Period_End__c</columns>
    <columns>Status__c</columns>
    <columns>Actual_Income__c</columns>
    <columns>Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft,Sent</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Invoice__c.Billable</value>
    </filters>
    <filters>
        <field>Billed_To__c</field>
        <operation>notEqual</operation>
        <value>Sergey Zenko UK</value>
    </filters>
    <label>Unpaid Invoices</label>
</ListView>